--- a/index.html
+++ b/index.html
@@ -23,27 +23,37 @@
       text-shadow: 2px 2px 4px #000;
     }
     .instrumento {
-      margin: 1.5rem 0;
+      margin: 2rem auto;
+      max-width: 400px;
+      padding: 1.5rem;
+      background-color: rgba(0, 0, 0, 0.5);
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.7);
+    }
+    .instrumento h2 {
+      margin-bottom: 1rem;
+      text-shadow: 1px 1px 3px #000;
     }
     a {
       display: inline-block;
       padding: 1rem 2rem;
-      background-color: #007BFF;
+      background-color: rgba(0, 123, 255, 0.9);
       color: white;
       text-decoration: none;
       border-radius: 8px;
       font-size: 1.2rem;
       transition: background-color 0.3s;
       text-shadow: 1px 1px 2px #000;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
     }
     a:hover {
-      background-color: #0056b3;
+      background-color: rgba(0, 86, 179, 0.9);
     }
     .fa-icon {
       margin-right: 0.5rem;
     }
     footer {
-      margin-top: 3rem;
+      margin-top: 4rem;
       font-size: 1rem;
       color: #ddd;
       text-shadow: 1px 1px 2px #000;
@@ -79,3 +89,4 @@
   </footer>
 </body>
 </html>
+
